framework/tests/annotationclassloader/Expected.txt
LoaderTest.java:7: error: (unique.leaked)
    Object[] ar = new Object[] {o};
                                ^
1 error
